# PaymentPython

./: README.md  alembic.ini  pyproject.toml  Бизнес логика.md
src/config/: db.py  env.py  fastapi.py  infrastructure.py  security.py
src/domain/: entities.py  exceptions.py
src/domain/interfaces/: crypto.py  repositories.py
src/infrastructure/containers/: core.py  data.py  main.py  services.py
src/infrastructure/cryptobot/: client.py  dto.py
src/infrastructure/db/: dependencies.py  mapper.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 570c3bb2bffa_.py
src/infrastructure/db/models/: __init__.py  base.py  payment.py  subscription.py  user.py
src/infrastructure/db/repositories/: __init__.py  base.py  payment.py  subscription.py  user.py
src/infrastructure/security/: token.py
src/presentation/api/controllers/: payment.py
src/services/: payment.py  subscription.py  user.py
