[project]
name = "PayPython"
version = "0.1.0"
description = "Payment System with integration with CryptoBot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "environs>=14.5.0",
    "fastapi>=0.128.0",
    "fastapi-filter>=2.0.1",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
]
